srv/fogproject/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fogproject
spec:
  replicas: 1
  template:
    metadata:
      name: fogproject
      labels:
        app: fogproject
    spec:
      hostNetwork: true
      nodeName: vmnuvem5
      containers:
        - name: fogproject
          image: cticsjeifsc/fog
          resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              cpu: "2"
              memory: "1Gi"
          volumeMounts:
            - name: mysql
              mountPath: /var/lib/mysql
            - name: pmagic
              mountPath: /var/www/pmagic
      restartPolicy: Always
      volumes:
        - name: mysql
          persistentVolumeClaim:
            claimName: fogproject-mysql
        - name: pmagic
          persistentVolumeClaim:
            claimName: fogproject-pmagic
