srv/fogproject/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fogproject
  name: fogproject
spec:
  ports:
    - name: http1
      port: 80
      protocol: TCP
      targetPort: 8083
    - name: http2
      port: 8083
      protocol: TCP
      targetPort: 8083
  selector:
    app: fogproject
