srv/fogproject/Ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: fogproject
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: '/fog'
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  rules:
    - host: fogproject.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: fogproject
              servicePort: 8083
    - host: fog.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: fogproject
              servicePort: 8083
